--- a/app/embed/ira/embed.css
+++ b/app/embed/ira/embed.css
@@ -1,7 +1,30 @@
 body {
   background: transparent !important;
+  overflow-x: hidden !important;
+  max-width: 100vw;
 }
 
 html {
   background: transparent !important;
+  overflow-x: hidden !important;
+  max-width: 100vw;
+}
+
+/* Custom Scrollbar */
+.ira-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
+}
+
+.ira-scrollbar::-webkit-scrollbar {
+  width: 3px;
+}
+
+.ira-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.ira-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
 }
